--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
-body {
-    background-color: #000;    
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     overflow: hidden;
-    background-repeat: no-repeat;
-  }
+}
+
+.canvas-container {
+    height: 100vh;
+    width: 100vw;
+    background: #6d0df3;
+}
