--- a/style.css
+++ b/style.css
@@ -1,15 +1,33 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@font-face{
+    font-family: "cy-grotesk-key-regular";
+    src: local( "cy-grotesk-key-regular"), url(font/cy-grotesk-key-regular.ttf);
+}
+*{
+    font-family:"cy-grotesk-key-regular" ;
+    margin: 0; padding: 20px;
+    -webkit-text-size-adjust:none;
+    font-size-adjust: none;
+    text-transform: uppercase;
+    font-weight: lighter;
 }
 
-body {
-    overflow: hidden;
+:root{
+    --textcolor : #ffffff;
+    --maincolor : #101010;
 }
 
-.canvas-container {
-    height: 100vh;
-    width: 100vw;
-    background: #6d0df3;
+body{
+    background-color: var(--maincolor);
+    overflow: auto;
+    padding-top: 100px;
 }
+body::-webkit-scrollbar{
+  width: 0px;
+}
+
+.text{
+    font-size: 1.2rem;
+    text-align: left;
+    color: var(--textcolor);
+}
+
